feat: v1.0.0 - all refactoring, add support slack incoming webhook